--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="logo">
-        <img src="img/wikipedia4.png" width="50" alt="logo do Wikipedia"/>
+        <img src="wikipedia4.png" width="50" alt="logo do Wikipedia"/>
         <h1>Wikipedia</h1>
         <h6>A enciclopédia livre</h6>
         <form action="" method="post">
@@ -22,15 +22,15 @@
     <h2>Conteúdo</h2>
     <ul>
         <li><a href="#">Início</a></li><br>
-        <li><a href="">Visão Geral</a></li><br>
-        <li><a href="">Comparação com outras enciclopédias</a></li><br>
-        <li><a href="">A Wikipédia em outros idiomas</a></li><br>
-        <li><a href="">Ver também</a></li><br>
-        <li><a href="">Referências</a></li><br>
+        <li><a href="#">Visão Geral</a></li><br>
+        <li><a href="#">Comparação com outras enciclopédias</a></li><br>
+        <li><a href="#">A Wikipédia em outros idiomas</a></li><br>
+        <li><a href="#">Ver também</a></li><br>
+        <li><a href="#">Referências</a></li><br>
     </ul>
     </nav>
     <main><hr>
-        <section href=""><b>Visão Geral</b></section><hr>
+        <section href="#"><b>Visão Geral</b></section><hr>
         <article><p> Bem-vindo à <b>Wikipédia</b>, a enciclopédia livre, que qualquer um pode editar.</p> <br>
 
             <p>O projeto Wikipédia foi iniciado em 15 de janeiro de 2001, na versão em língua inglesa. Em apenas um ano de existência, esta versão já possuía quase 10 mil artigos. Até hoje já foram criados mais de 14 milhões de artigos em centenas de línguas e dialetos (1 117 897 artigos na versão em português). Todos os dias, centenas de colaboradores de todas as partes do mundo editam milhares de artigos e criam muitos verbetes inteiramente novos.</p>
@@ -135,8 +135,8 @@
         <a href="//pt.m.wikipedia.org/w/index.php?title=Wikip%C3%A9dia:Sobre_a_Wikip%C3%A9diaU+0026 mobileaction=toggle_view_mobile">Versão móvel</a>&nbsp &nbsp
         <a href="#">Editar configurações da antevisão</a></li></ul>
     <ul>
-        <li ><a href="https://wikimediafoundation.org/"><img src="img\wikimedia-button.png" srcset="/static/images/footer/wikimedia-button-1.5x.png 1.5x, /static/images/footer/wikimedia-button-2x.png 2x" width="88" height="31" alt="Wikimedia Foundation" loading="lazy"></a></li>
-        <li ><a href="https://www.mediawiki.org/"><img src="img\poweredby_mediawiki_88x31.png" alt="Powered by MediaWiki" srcset="/static/images/footer/poweredby_mediawiki_132x47.png 1.5x, /static/images/footer/poweredby_mediawiki_176x62.png 2x" width="88" height="31" loading="lazy"></a></li>
+        <li ><a href="https://wikimediafoundation.org/"><img src="wikimedia-button.png" srcset="/static/images/footer/wikimedia-button-1.5x.png 1.5x, /static/images/footer/wikimedia-button-2x.png 2x" width="88" height="31" alt="Wikimedia Foundation" loading="lazy"></a></li>
+        <li ><a href="https://www.mediawiki.org/"><img src="poweredby_mediawiki_88x31.png" alt="Powered by MediaWiki" srcset="/static/images/footer/poweredby_mediawiki_132x47.png 1.5x, /static/images/footer/poweredby_mediawiki_176x62.png 2x" width="88" height="31" loading="lazy"></a></li>
     </ul>
 </nav>
 </footer>
